--- a/stable/cluster-autoscaler/values.yaml
+++ b/stable/cluster-autoscaler/values.yaml
@@ -33,6 +33,8 @@ extraArgs: {}
   # skip-nodes-with-local-storage: false
   # skip-nodes-with-system-pods: true
 
+extraEnv: {}
+
 ## Affinity for pod assignment
 ## Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
 ## affinity: {}
